--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate-sass": "^0.8.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.12",
     "bootstrap-vue": "^2.0.0-rc.18",
     "chart.js": "^2.8.0",
     "es6-promise": "^4.2.6",
