--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue": "^2.6.10",
     "vue-analytics": "^5.22.1",
     "vue-chartjs": "^3.4.2",
+    "vue-element-loading": "^1.1.5",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.5",
     "vue-sidebar-menu": "^3.7.0",
